--- a/05-operadores.Rmd
+++ b/05-operadores.Rmd
@@ -26,7 +26,7 @@ Operador  | Operación       | Ejemplo | Resultado
 
 Es posible realizar operaciones aritméticas con datos de tipo **entero** y **numérico**. 
 
-Si escribes una operación aritmética en la consola de R y das Enter, esta se realiza y se devuelve su resultado.
+Si escribes una operación aritmética en la consola de R y das *Enter*, esta se realiza y se devuelve su resultado.
 ```{r, echo=TRUE}
 15 * 3
 ```
@@ -146,7 +146,7 @@ Aunque podemos usar el signo igual para una asignación, a lo largo de este libr
 
 Después de realizar la operación de asignación, podemos usar el nombre de la variable para realizar operaciones con ella, como si fuera del tipo de datos que le hemos asignado. Si asignamos un valor a una variable a la que ya habíamos asignado datos, nuestra variable conserva el valor más reciente.
 
-Además, esta operación nos permite "guardar" el resultado de operaciones, de modo que podemos recuperarlos sin necesidad de realizar las operaciones otra vez. Basta con llamar el nombre de la variable en la consola
+Además, esta operación nos permite "guardar" el resultado de operaciones, de modo que los podemos recuperar sin necesidad de realizar las operaciones otra vez. Basta con llamar el nombre de la variable en la consola
 
 En este ejemplo, asignamos valores a las variables `estatura` y `peso`.
 ```{r, echo=TRUE}
