--- a/index.Rmd
+++ b/index.Rmd
@@ -2,11 +2,26 @@
 title: "R para principiantes"
 author: "Juan Bosco Mendoza Vega"
 site: bookdown::bookdown_site
+url: 'https\://rprincipiantes.boscomendoza.com/'
 cover-image: "images/r-principiantes-cover.png"
 github-repo: "jboscomendoza/r-principiantes-bookdown"
-description: "Un libro introductorio a R, dirigido a personas sin experiencia previa con lenguajes de programación."
+description: "R para principiantes es un libro introductorio a R, dirigido a personas sin experiencia previa con lenguajes de programación. Este libro aborda los conceptos básicos de R, desde la instalación, tipos de datos, importar y exportar datos, hasta la definición de funciones, estructuras de control y la generación de gráficos."
+sharing:
+      facebook: yes
+      twitter: yes
+      google: yes
+      linkedin: yes
+favicon: "bosco_favicon.ico"
 fig_height: 5 
 output:
+  bookdown::html_book:
+    css: toc.css
+    highlight: haddock
+    documentclass: book
+    theme: journal
+  bookdown::pdf_book:
+    keep_tex: yes
+    highlight: haddock
   bookdown::gitbook:
     highlight: haddock
     lib_dir: assets
@@ -14,14 +29,6 @@ output:
     config:
       toolbar:
         position: static
-  bookdown::pdf_book:
-    keep_tex: yes
-    highlight: haddock
-  bookdown::html_book:
-    css: toc.css
-    highlight: haddock
-    documentclass: book
-    theme: journal
 ---
 
 # Prefacio {-}
@@ -58,6 +65,10 @@ Ha colaborado en los Comités Interinstitucionales para la Evaluación de la Edu
 
 Desde el 2014 trabaja en el Instituto Nacional para la Evaluación de la Educación, en donde actualmente se ha desempeñado en las áreas de Evaluación de Resultados Educativos y de Evaluación de la Oferta Educativa.
 
-Puedes encontrar el repositorio público de Github del autor en el siguiente enlace:
+Puedes visitar el sitio personal del autor en el siguiente enlace:
+
+* http://boscomendoza.com
+
+Tambien puedes encontrar el repositorio público de Github del autor en el siguiente enlace:
 
 * https://github.com/jboscomendoza
